[project]
name = "ikuuu-checkin"
version = "0.1.0"
description = "ikuuu.org 登录签到分析，仅供学习使用"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.15.0",
    "ddddocr>=1.6.1",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pycryptodome>=3.23.0",
    "requests>=2.33.1",
]

[tool.ruff]
line-length = 200
extend-exclude = ["GeekedTest"]
